# matt_skill_test

./: .gitignore  CLAUDE.md  CONTEXT.md  Makefile  missin_file_result_page.md
.agents/skills/teach/: MISSION.md  NOTES.md  RESOURCES.md
.agents/skills/teach/assets/: yazi-course.css
.agents/skills/teach/learning-records/: 0001-baseline-and-install-blocker.md  0002-lesson0-done-blocker-resolved.md  0003-lesson4-s-search-fdfind-fallback.md  0004-lesson5-tags-verified-and-storage.md
.agents/skills/teach/lessons/: 0001-install-and-y-wrapper.html  0002-core-navigation.html  0006-file-tags.html  (+4 more)
.scratch/missing-file-dashboard/: PRD.md
.scratch/missing-file-dashboard-page/: tmp.md
backend/: .env.example  pyproject.toml
backend/config/: urls.py
backend/config/settings/: base.py  dev.py  prod.py
backend/dashboard/: admin.py  models.py  tests.py  urls.py  views.py
backend/dashboard/management/commands/: seed_demo.py
backend/dashboard/migrations/: 0001_initial.py
backend/tests/: conftest.py  test_summary_api.py
docs/adr/: 0001-monorepo.md
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/__tests__/: SummaryDashboard.test.js
frontend/src/api/: missing-scan.js
frontend/src/components/: FileDetailDrawer.vue  FilterToolbar.vue  GroupCard.vue  MissingScanBoard.vue  OverviewCards.vue  SummaryDashboard.vue
frontend/src/data/: missing_file_summary_response.json  sample-data.js  selectors.js  types.js
lovable/: plan.md  styles.css  缺失文件扫描看板 (6_28_2026 11：57：53 PM).html
(+1 files in other folders)
