[project]
name = "backend"
version = "0.1.0"
description = "缺失文件扫描看板 — 后端"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=5.2,<5.3",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.14.0",
    "djangorestframework>=3.17.1",
]

[dependency-groups]
dev = [
    "pytest-django>=4.12.0",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501", "F401"]

[tool.ruff.format]
quote-style = "double"
